# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPLv2

  18 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    iwconfig now sets ESSIDVAR for master/ad-hoc modes - fixes #74802

  17 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    wpa_supplicant - fixed file location for wpa_cli and association test
    as it they changed in wpa_supplicant-0.3.x
    wpa_supplicant now brings the interface up before launching - fixes #74637

* rc-scripts 1.6.8 (15 Dec 2004)

  15 Dec 2004; Mike Frysinger <vapier@gentoo.org>:

    start_critical_service in /sbin/rc should rely on $1 instead of 
    the external variable $x for the service name.  #74425

  15 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    rc-status now reports stopping status
    Updated documentation to point non-usb linux-wlan-ng users to use
    hostap-driver instead

  13 Dec 2004; Martin Schlemmer <azarah@gentoo.org>:

    Tweak init.d/halt.sh to support new text based udev_db ('udevinfo -d' do
    not work anymore, and there is no space after '(S|N):').  Also check if
    devices.tar.bz2 is empty before trying to create it, bug #71143.

  12 Dec 2004; Mike Frysinger <vapier@gentoo.org>:

    Tweak get_mount_fstab to only print the first mount point found and then 
    spit warning messages for extra matches.  Also add support for RC_USE_FSTAB
    so normal users don't have to worry about a broken /etc/fstab.

    Add an additional sanity check to the udev tarball usage.  Don't try to 
    unpack an empty or non-existant tarball.

    Tweak the 'static' description so users know they can use it to make 
    /sbin/rc ignore /dev completely.

  12 Dec 2004; Martin Schlemmer <azarah@gentoo.org>:

    Add suport for using /sbin/udevsend from new udev-048 as hotplug multiplexer.

  12 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    fixed installed typo in net.lo - fixes #74152. Thanks to Federico Galassi
