@@ -12,7 +12,7 @@
 #include <string.h>
 #include <sys/ioctl.h>
 #include <sys/stat.h>
-#include <sys/sysmacros.h>
+#include "headers.h"
 
 int main(int argc, char *argv[])
 {
@@ -23,13 +23,14 @@ int main(int argc, char *argv[])
 	fstat(0, &sb);
 	maj = major(sb.st_rdev);
 	if (maj != 3 && (maj < 136 || maj > 143)) {
+#if defined(__linux__)
 		if (ioctl (0, TIOCLINUX, &twelve) < 0) {
 			printf("serial\n");
 			return 1;
-		} else {
-			printf("vt\n");
-			return 0;
 		}
+#endif
+		printf("vt\n");
+		return 0;
 	} else {
 		printf("pty\n");
 		return 2;
