@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPLv2
 
+  23 Dec 2004; Mike Frysinger <vapier@gentoo.org>:
+
+    Merge a bunch of BSD fixes into our .c files.
+
   18 Dec 2004; Roy Marples <uberlord@gentoo.org>:
 
     iwconfig now sets ESSIDVAR for master/ad-hoc modes - fixes #74802
